<resources>
    <string name="app_name">Workout tracker</string>
    <string name="sign_in">Sign In</string>
    <string name="registrate">Registrate</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_again">Password Again</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="next">Next</string>
    <string name="no_favorite_workouts">You Have No Favorite Workouts</string>
    <string name="home">Home</string>
    <string name="charts">Charts</string>
    <string name="chart_error_message">There Is Not Enough Data To Display On The Chart.</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="standings">Standings</string>
    <string name="standings_error_message">There Are No Users Who Have Completed The Exercise.</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="empty_category_error_message">There Is No Exercise In This Category</string>
    <string name="create_a_custom_exercise">Create a Custom Exercise</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="no_exercises">No Exercises In This Workout</string>
    <string name="sets">Sets</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="reps">Reps</string>
    <string name="switch_exercise">Switch Exercise</string>
    <string name="workout_complete">Workout Complete</string>
    <string name="end_workout">End Workout</string>
    <string name="your_workouts">Your Workouts</string>
    <string name="you_have_no_workouts">You Have No Workouts</string>
    <string name="create_workout">Create Workout</string>
    <string name="volume">Volume</string>
    <string name="workout">Workout</string>
    <string name="select_a_body_part">Select a Body Part</string>
    <string name="select_an_exercise">Select an Exercise</string>
    <string name="nesteddropdownmenu_empty_category_error_message">You Have Not Completed an Exercise In This Category Yet.</string>
    <string name="x">x</string>
    <string name="ok">OK</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="update_profile_failed">Failed To Update Your Profile</string>
    <string name="create_exercise_failed">Failed To Create The Exercise</string>
    <string name="workout_update_failed">Failed to Update The Workout</string>
    <string name="workout_save_failed">Failed To Save The Workout</string>
    <string name="exercise_already_exists">Exercise Already Exists!</string>
    <string name="login_error_message">Incorrect email or password.</string>
    <string name="registration_error_message">The email address is already in use by another account.</string>
</resources>