...
                        viewModel.signOut(context)
                        signOut()
                    }
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_logout),
                        contentDescription = "Logout Icon"
                    )
                }
            }
            Column(
                modifier = Modifier
                    .fillMaxSize()
...
