...
                    style = workoutTrackerTypography.titleTextStyle,
                    modifier = Modifier.padding(vertical = workoutTrackerDimens.gapVeryLarge)
                )
                if (exercises.isNullOrEmpty() || users == null) {
                    WorkoutTrackerProgressIndicator()
                } else {
                    WorkoutTrackerDropDownMenu(
                        selectedItem = (uiState as StandingLoaded).selectedItem.name,
                        onSelectedItemChange = {
                            viewModel.onSelectedItemChangeByName(
                                name = it,
                                exercises = exercises!!
                            )
...
