...
                    Text(
                        text = stringResource(R.string.add_exercise),
                        style = workoutTrackerTypography.titleTextStyle,
                        modifier = Modifier.padding(vertical = workoutTrackerDimens.gapVeryLarge)
                    )

                    WorkoutTrackerDropDownMenu(
                        selectedItem = (uiState as AddExerciseLoaded).selectedItem,
                        onSelectedItemChange = viewModel::onSelectedItemChange,
                        items = AppData.BODY_PARTS,
                        modifier = Modifier
                            .padding(horizontal = workoutTrackerDimens.gapNormal)
                            .testTag("WorkoutTrackerDropDownMenu")
                    )
                    if (exercises == null) {
                        WorkoutTrackerProgressIndicator()
                    } else {
                        AddExerciseDialog(
                            newExercise = (uiState as AddExerciseLoaded).newExercise,
                            onNewExerciseChange = viewModel::onNewExerciseChange,
                            selectedItem = (uiState as AddExerciseLoaded).selectedItem,
                            showDialog = (uiState as AddExerciseLoaded).showDialog,
                            onDismissRequest = viewModel::onShowDialogChange,
                            onSaveButtonClick = {
...
